--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -3842,6 +3842,366 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6433, 17)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "drive_time\n",
+       "0 days 00:05:25    15\n",
+       "0 days 00:08:44    14\n",
+       "0 days 00:06:05    14\n",
+       "0 days 00:04:42    13\n",
+       "0 days 00:06:16    13\n",
+       "                   ..\n",
+       "0 days 00:22:29     1\n",
+       "0 days 00:57:34     1\n",
+       "0 days 00:44:01     1\n",
+       "0 days 00:44:31     1\n",
+       "0 days 00:56:32     1\n",
+       "Name: count, Length: 2046, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drive_time.value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = df.pivot(columns='payment' ,values='total')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>payment</th>\n",
+       "      <th>NaN</th>\n",
+       "      <th>cash</th>\n",
+       "      <th>credit card</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "payment  NaN  cash  credit card\n",
+       "0        NaN   NaN        12.95\n",
+       "1        NaN   9.3          NaN\n",
+       "2        NaN   NaN        14.16\n",
+       "3        NaN   NaN        36.95\n",
+       "4        NaN   NaN        13.40"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              datetime  station_antwerp  station_paris  station_london\n",
+      "0  2019-05-07 02:00:00              NaN            NaN            23.0\n",
+      "1  2019-05-07 03:00:00             50.5           25.0            19.0\n",
+      "2  2019-05-07 04:00:00             45.0           27.7            19.0\n",
+      "3  2019-05-07 05:00:00              NaN           50.4            16.0\n",
+      "4  2019-05-07 06:00:00              NaN           61.9             NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load air_quality dataset from an online CSV source\n",
+    "url = \"https://raw.githubusercontent.com/pandas-dev/pandas/main/doc/data/air_quality_no2.csv\"\n",
+    "air_quality = pd.read_csv(url)\n",
+    "\n",
+    "print(air_quality.head())  # Display first few rows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_2 = air_quality.pivot(columns='station_london', index='datetime', values='station_paris')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "station_london       NaN   0.0   1.0   2.0   3.0   4.0   5.0   6.0   7.0   \\\n",
+      "datetime                                                                    \n",
+      "2019-05-07 02:00:00   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 03:00:00   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 04:00:00   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 05:00:00   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 06:00:00  61.9   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "...                   ...   ...   ...   ...   ...   ...   ...   ...   ...   \n",
+      "2019-06-20 22:00:00  21.4   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-20 23:00:00  24.9   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-21 00:00:00  26.5   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-21 01:00:00  21.8   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-21 02:00:00  20.0   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "\n",
+      "station_london       8.0   ...  52.0  53.0  54.0  58.0  59.0  60.0  62.0  \\\n",
+      "datetime                   ...                                             \n",
+      "2019-05-07 02:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 03:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 04:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 05:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-05-07 06:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "...                   ...  ...   ...   ...   ...   ...   ...   ...   ...   \n",
+      "2019-06-20 22:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-20 23:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-21 00:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-21 01:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "2019-06-21 02:00:00   NaN  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "\n",
+      "station_london       65.0  67.0  97.0  \n",
+      "datetime                               \n",
+      "2019-05-07 02:00:00   NaN   NaN   NaN  \n",
+      "2019-05-07 03:00:00   NaN   NaN   NaN  \n",
+      "2019-05-07 04:00:00   NaN   NaN   NaN  \n",
+      "2019-05-07 05:00:00   NaN   NaN   NaN  \n",
+      "2019-05-07 06:00:00   NaN   NaN   NaN  \n",
+      "...                   ...   ...   ...  \n",
+      "2019-06-20 22:00:00   NaN   NaN   NaN  \n",
+      "2019-06-20 23:00:00   NaN   NaN   NaN  \n",
+      "2019-06-21 00:00:00   NaN   NaN   NaN  \n",
+      "2019-06-21 01:00:00   NaN   NaN   NaN  \n",
+      "2019-06-21 02:00:00   NaN   NaN   NaN  \n",
+      "\n",
+      "[1035 rows x 61 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(no_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_max = no_2.resample(\"ME\").max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "station_london  NaN   0.0   1.0   2.0   3.0   4.0   5.0   6.0   7.0   8.0   \\\n",
+      "datetime                                                                     \n",
+      "2019-05-31      61.9  12.4  19.9  13.3  18.3   NaN  25.3  24.1   NaN  47.4   \n",
+      "2019-06-30      74.2  43.1  51.5  44.6  40.5  18.0  43.9  48.5  51.2  68.1   \n",
+      "\n",
+      "station_london  ...  52.0  53.0  54.0  58.0  59.0  60.0  62.0  65.0  67.0  \\\n",
+      "datetime        ...                                                         \n",
+      "2019-05-31      ...  26.7  17.5  22.7  29.9  34.5  27.0  24.4  29.2  23.9   \n",
+      "2019-06-30      ...  49.4   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+      "\n",
+      "station_london  97.0  \n",
+      "datetime              \n",
+      "2019-05-31      24.6  \n",
+      "2019-06-30       NaN  \n",
+      "\n",
+      "[2 rows x 61 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(monthly_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality['datetime'] = pd.to_datetime(air_quality['datetime'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dati = pd.date_range('2018-02-02', periods=5, freq = 'h')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatetimeIndex(['2018-02-02 00:00:00', '2018-02-02 01:00:00',\n",
+      "               '2018-02-02 02:00:00', '2018-02-02 03:00:00',\n",
+      "               '2018-02-02 04:00:00'],\n",
+      "              dtype='datetime64[ns]', freq='h')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dati)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Understanding resample() in Pandas with Time Series Data\n",
+    "- The resample() method in Pandas is used to change the frequency of time series data. \n",
+    "- It helps aggregate or downsample data (e.g., from minutes to hours) or upsample (e.g., from daily to hourly)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "df.resample(rule, on=\"datetime_column\").agg({\"column\": \"aggregation_function\"})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *rule* → Defines the new frequency (e.g., \"D\" for daily, \"H\" for hourly, \"W\" for weekly).\n",
+    "- *on* → Specifies the datetime column to resample (if not already set as an index).\n",
+    "- *agg()* → Defines the aggregation function (e.g., \"sum\", \"mean\", \"count\")."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
