time series dataset

--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -4205,6 +4205,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Example: Using resample() on Air Quality Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                datetime  station_antwerp  station_paris  station_london\n",
+      "0    2019-05-07 02:00:00              NaN            NaN            23.0\n",
+      "1    2019-05-07 03:00:00             50.5           25.0            19.0\n",
+      "2    2019-05-07 04:00:00             45.0           27.7            19.0\n",
+      "3    2019-05-07 05:00:00              NaN           50.4            16.0\n",
+      "4    2019-05-07 06:00:00              NaN           61.9             NaN\n",
+      "...                  ...              ...            ...             ...\n",
+      "1030 2019-06-20 22:00:00              NaN           21.4             NaN\n",
+      "1031 2019-06-20 23:00:00              NaN           24.9             NaN\n",
+      "1032 2019-06-21 00:00:00              NaN           26.5             NaN\n",
+      "1033 2019-06-21 01:00:00              NaN           21.8             NaN\n",
+      "1034 2019-06-21 02:00:00              NaN           20.0             NaN\n",
+      "\n",
+      "[1035 rows x 4 columns]\n",
+      "            station_antwerp  station_paris  station_london\n",
+      "datetime                                                  \n",
+      "2019-05-07             95.5          711.9           442.0\n",
+      "2019-05-08             43.5          612.7           609.0\n",
+      "2019-05-09             40.5          668.1           993.0\n",
+      "2019-05-10             22.0          790.8           831.0\n",
+      "2019-05-11             47.5          562.9           586.0\n",
+      "            station_antwerp  station_paris  station_london\n",
+      "datetime                                                  \n",
+      "2019-05-31           1874.5        16372.1         16503.0\n",
+      "2019-06-30            574.5        11479.4          7506.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load sample air quality dataset\n",
+    "url = \"https://raw.githubusercontent.com/pandas-dev/pandas/main/doc/data/air_quality_no2.csv\"\n",
+    "df = pd.read_csv(url)\n",
+    "# Convert to datetime\n",
+    "df[\"datetime\"] = pd.to_datetime(df[\"datetime\"])\n",
+    "\n",
+    "# Resample to daily average NO2 levels\n",
+    "daily_avg = df.resample(\"D\", on=\"datetime\").sum()\n",
+    "monthly_max = df.resample(\"ME\", on=\"datetime\").sum()\n",
+    "print(df)\n",
+    "print(daily_avg.head())\n",
+    "print(monthly_max)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2449.0)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_avg['station_antwerp'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2449.0)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_max['station_antwerp'].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common Resampling Frequencies\n",
+    "- *\"D\"\tDaily*\n",
+    "- *\"H\"\tHourly*\n",
+    "- *\"W\"\tWeekly*\n",
+    "- *\"M\"\tMonth-end*\n",
+    "- *\"Q\"\tQuarter-end*\n",
+    "- *\"Y\"\tYear-end*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### How to Manipulate Textual Data\n",
     "- Pandas provides string methods for text manipulation."
    ]
