--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -4899,6 +4899,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### When working with multiple tables in pandas that have foreign keys, you typically use merging (joins) to combine related data. Here’s how you can work with them:\n",
+    "\n",
+    "- Understanding Foreign Keys in Pandas\n",
+    "   - A foreign key in one table refers to a primary key in another. \n",
+    "   - This is similar to relational databases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   order_id  customer_id product  amount     name city\n",
+      "0       101            1  Laptop    1200    Alice   NY\n",
+      "1       102            3   Phone     800  Charlie   SF\n",
+      "2       103            2  Tablet     600      Bob   LA\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Creating dataframes\n",
+    "customers_df = pd.DataFrame({\n",
+    "    'customer_id': [1, 2, 3],\n",
+    "    'name': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'city': ['NY', 'LA', 'SF']\n",
+    "})\n",
+    "\n",
+    "orders_df = pd.DataFrame({\n",
+    "    'order_id': [101, 102, 103],\n",
+    "    'customer_id': [1, 3, 2],\n",
+    "    'product': ['Laptop', 'Phone', 'Tablet'],\n",
+    "    'amount': [1200, 800, 600]\n",
+    "})\n",
+    "\n",
+    "# Merging tables on foreign key\n",
+    "merged_df = pd.merge(orders_df, customers_df, on=\"customer_id\", how=\"inner\")\n",
+    "\n",
+    "print(merged_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Filter by Text"
    ]
   },
