--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -4908,28 +4908,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   order_id  customer_id product  amount     name city\n",
-      "0       101            1  Laptop    1200    Alice   NY\n",
-      "1       102            3   Phone     800  Charlie   SF\n",
-      "2       103            2  Tablet     600      Bob   LA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Creating dataframes\n",
     "customers_df = pd.DataFrame({\n",
-    "    'customer_id': [1, 2, 3],\n",
-    "    'name': ['Alice', 'Bob', 'Charlie'],\n",
-    "    'city': ['NY', 'LA', 'SF']\n",
+    "    'customer_id': [1, 2, 3,4],\n",
+    "    'name': ['Alice', 'Bob', 'Charlie','Dave'],\n",
+    "    'city': ['NY', 'LA', 'SF','CA']\n",
     "})\n",
     "\n",
     "orders_df = pd.DataFrame({\n",
@@ -4938,11 +4927,276 @@
     "    'product': ['Laptop', 'Phone', 'Tablet'],\n",
     "    'amount': [1200, 800, 600]\n",
     "})\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merging tables on foreign key\n",
     "merged_df = pd.merge(orders_df, customers_df, on=\"customer_id\", how=\"inner\")\n",
     "\n",
     "print(merged_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Join Types in Pandas\n",
+    "- Inner Join (how=\"inner\") → *Keeps only matching rows.*\n",
+    "- Left Join (how=\"left\") → *Keeps all rows from left table, adds NaN for missing matches.*\n",
+    "- Right Join (how=\"right\") → *Keeps all rows from right table.*\n",
+    "- Outer Join (how=\"outer\") → *Keeps all rows from both tables, fills missing values with NaN.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>name</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Phone</td>\n",
+       "      <td>800</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>600</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  customer_id product  amount     name city\n",
+       "0       101            1  Laptop    1200    Alice   NY\n",
+       "1       102            3   Phone     800  Charlie   SF\n",
+       "2       103            2  Tablet     600      Bob   LA"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df = pd.merge(orders_df, customers_df, on=\"customer_id\", how=\"left\")\n",
+    "merged_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handling Missing Values (NaN)\n",
+    "- When merging tables, you might get missing values (NaN) if there's no matching key. \n",
+    "   - Let's see how to handle them.\n",
+    "\n",
+    "Example: *Left Join with Missing Data*\n",
+    "   - If a customer exists in customers_df but has no orders in orders_df, \n",
+    "       - a left join will return NaN for missing orders."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id     name city  order_id product  amount\n",
+      "0            1    Alice   NY     101.0  Laptop  1200.0\n",
+      "1            2      Bob   LA     103.0  Tablet   600.0\n",
+      "2            3  Charlie   SF     102.0   Phone   800.0\n",
+      "3            4     Dave   CA       NaN     NaN     NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df = pd.merge(customers_df, orders_df, on=\"customer_id\", how=\"left\")\n",
+    "print(merged_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handling Multiple Foreign Keys\n",
+    "* If you have more tables with foreign keys, you can merge step by step.\n",
+    "- *Example with Products Table:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products_df = pd.DataFrame({\n",
+    "    'product': ['Laptop', 'Phone', 'Tablet'],\n",
+    "    'category': ['Electronics', 'Electronics', 'Gadgets']\n",
+    "})\n",
+    "\n",
+    "# Merging orders with customers and products\n",
+    "merged_df = pd.merge(orders_df, customers_df, on=\"customer_id\", how=\"inner\")\n",
+    "merged_df = pd.merge(merged_df, products_df, on=\"product\", how=\"inner\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>name</th>\n",
+       "      <th>city</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Electronics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Phone</td>\n",
+       "      <td>800</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>Electronics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>600</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>Gadgets</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  customer_id product  amount     name city     category\n",
+       "0       101            1  Laptop    1200    Alice   NY  Electronics\n",
+       "1       102            3   Phone     800  Charlie   SF  Electronics\n",
+       "2       103            2  Tablet     600      Bob   LA      Gadgets"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performance Tips\n",
+    "- Use *merge()* instead of loops for *efficiency*.\n",
+    "- Set *indexes* when dealing with large data: ```df.set_index('column')```\n",
+    "- Use ```df.astype({'column': type})``` to ensure correct data types."
    ]
   },
   {
