--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -5105,7 +5105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5129,64 +5129,234 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>order_id</th>\n",
        "      <th>customer_id</th>\n",
-       "      <th>product</th>\n",
-       "      <th>amount</th>\n",
        "      <th>name</th>\n",
        "      <th>city</th>\n",
-       "      <th>category</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>amount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>101</td>\n",
        "      <td>1</td>\n",
-       "      <td>Laptop</td>\n",
-       "      <td>1200</td>\n",
        "      <td>Alice</td>\n",
        "      <td>NY</td>\n",
-       "      <td>Electronics</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>1200.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>102</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Phone</td>\n",
-       "      <td>800</td>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>Electronics</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>600.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>103</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Tablet</td>\n",
-       "      <td>600</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>LA</td>\n",
-       "      <td>Gadgets</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>Phone</td>\n",
+       "      <td>800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Dave</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Purchase</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   order_id  customer_id product  amount     name city     category\n",
-       "0       101            1  Laptop    1200    Alice   NY  Electronics\n",
-       "1       102            3   Phone     800  Charlie   SF  Electronics\n",
-       "2       103            2  Tablet     600      Bob   LA      Gadgets"
+       "   customer_id     name city  order_id      product  amount\n",
+       "0            1    Alice   NY     101.0       Laptop  1200.0\n",
+       "1            2      Bob   LA     103.0       Tablet   600.0\n",
+       "2            3  Charlie   SF     102.0        Phone   800.0\n",
+       "3            4     Dave   CA       0.0  No Purchase     0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handling Missing Values:\n",
+    "- Fill missing values\n",
+    "- Drop rows with missing data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filling missing values\n",
+    "merged_df.fillna({'order_id': 0, 'product': 'No Purchase', 'amount': 0}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing missing values from the dataset\n",
+    "merged_df.dropna(subset=['order_id'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id     name city  order_id      product  amount\n",
+      "0            1    Alice   NY     101.0       Laptop  1200.0\n",
+      "1            2      Bob   LA     103.0       Tablet   600.0\n",
+      "2            3  Charlie   SF     102.0        Phone   800.0\n",
+      "3            4     Dave   CA       0.0  No Purchase     0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(merged_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Set Index for Faster Merging\n",
+    "- Instead of merging on a column, we can set an index for faster lookups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers_df.set_index(\"customer_id\", inplace=True)\n",
+    "orders_df.set_index(\"customer_id\", inplace=True)\n",
+    "\n",
+    "merged_df = orders_df.join(customers_df, on=\"customer_id\", how=\"inner\")  # Faster than merge()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             order_id product  amount     name city\n",
+      "customer_id                                        \n",
+      "1                 101  Laptop    1200    Alice   NY\n",
+      "3                 102   Phone     800  Charlie   SF\n",
+      "2                 103  Tablet     600      Bob   LA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(merged_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Merging Multiple Tables Efficiently\n",
+    "- If you have three or more tables, merge step by step.\n",
+    "- *Example:* Three Table Merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = orders_df.merge(customers_df, on=\"customer_id\", how=\"inner\") \\\n",
+    "                     .merge(products_df, on=\"product\", how=\"left\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   order_id product  amount     name city     category\n",
+      "0       101  Laptop    1200    Alice   NY  Electronics\n",
+      "1       102   Phone     800  Charlie   SF  Electronics\n",
+      "2       103  Tablet     600      Bob   LA      Gadgets\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(merged_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optimizing with merge() vs map()\n",
+    "- merge() is great for combining dataframes.\n",
+    "- map() is useful for one-column lookups.\n",
+    "   - Example: Faster Lookup with map()\n",
+    "   - Instead of merging, use .map() for quick value replacement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of ['customer_id'] are in the columns\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16788\\4145443658.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcustomer_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcustomers_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"customer_id\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0morders_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"customer_name\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0morders_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"customer_id\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcustomer_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32me:\\house-pricing\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[0;32m   6118\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mfound\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6119\u001b[0m                         \u001b[0mmissing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6120\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6121\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmissing\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6122\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33mf\"\u001b[0m\u001b[1;33mNone of \u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mmissing\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m are in the columns\u001b[0m\u001b[1;33m\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   6123\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6124\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6125\u001b[0m             \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"None of ['customer_id'] are in the columns\""
+     ]
+    }
+   ],
+   "source": [
+    "customer_names = customers_df.set_index(\"customer_id\")[\"name\"]\n",
+    "orders_df[\"customer_name\"] = orders_df[\"customer_id\"].map(customer_names)\n"
    ]
   },
   {
