--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -5363,6 +5363,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Using query() for Filtering\n",
+    "- Instead of filtering after merging, use .query() for efficiency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_value_orders = merged_df.query(\"amount > 1000\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   order_id product  amount   name city     category\n",
+      "0       101  Laptop    1200  Alice   NY  Electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(high_value_orders)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "- Use ```merge()``` for relational joins, \n",
+    "   - but optimize with ```indexing``` and ```map()``` for speed.\n",
+    "- Handle missing values with ```fillna()``` or ```dropna()```\n",
+    "- Use ```query()``` for efficient filtering.\n",
+    "- Set indexes for better performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Performance Tips\n",
     "- Use *merge()* instead of loops for *efficiency*.\n",
     "- Set *indexes* when dealing with large data: ```df.set_index('column')```\n",
