--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -5407,11 +5407,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Scenario**: Analyzing E-commerce Sales Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*We have three tables:*\n",
+    "\n",
+    "- Customers *(customers_df)* – Stores customer details.\n",
+    "- Orders *(orders_df)* – Stores purchase records.\n",
+    "- Products *(products_df)* – Stores product details."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Customers Table\n",
+    "customers_df = pd.DataFrame({\n",
+    "    'customer_id': [1, 2, 3, 4, 5],\n",
+    "    'name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
+    "    'city': ['New York', 'Los Angeles', 'San Francisco', 'Chicago', 'Houston']\n",
+    "})\n",
+    "\n",
+    "# Orders Table (Some customers have no orders)\n",
+    "orders_df = pd.DataFrame({\n",
+    "    'order_id': [101, 102, 103, 104, 105, 106],\n",
+    "    'customer_id': [1, 3, 2, 1, 2, 4],  # Foreign key\n",
+    "    'product_id': [201, 202, 203, 201, 204, 205],  # Foreign key\n",
+    "    'amount': [1200, 800, 600, 1500, 900, 750]\n",
+    "})\n",
+    "\n",
+    "# Products Table\n",
+    "products_df = pd.DataFrame({\n",
+    "    'product_id': [201, 202, 203, 204, 205],\n",
+    "    'product_name': ['Laptop', 'Phone', 'Tablet', 'Headphones', 'Smartwatch'],\n",
+    "    'category': ['Electronics', 'Electronics', 'Gadgets', 'Accessories', 'Wearables']\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimized Merging Using Foreign Keys"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**We will**:\n",
+    "\n",
+    "1. Merge customers with orders *(customer_id as the key)*.\n",
+    "2. Merge the result with products *(product_id as the key)*.\n",
+    "3. Handle missing values *(some customers have no orders)*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id     name           city  order_id  product_id  amount  \\\n",
+      "0            1    Alice       New York     101.0       201.0  1200.0   \n",
+      "1            1    Alice       New York     104.0       201.0  1500.0   \n",
+      "2            2      Bob    Los Angeles     103.0       203.0   600.0   \n",
+      "3            2      Bob    Los Angeles     105.0       204.0   900.0   \n",
+      "4            3  Charlie  San Francisco     102.0       202.0   800.0   \n",
+      "5            4    David        Chicago     106.0       205.0   750.0   \n",
+      "6            5      Eve        Houston       0.0         NaN     0.0   \n",
+      "\n",
+      "  product_name     category  \n",
+      "0       Laptop  Electronics  \n",
+      "1       Laptop  Electronics  \n",
+      "2       Tablet      Gadgets  \n",
+      "3   Headphones  Accessories  \n",
+      "4        Phone  Electronics  \n",
+      "5   Smartwatch    Wearables  \n",
+      "6  No Purchase         None  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge customers with orders\n",
+    "merged_df = customers_df.merge(orders_df, on=\"customer_id\", how=\"left\")\n",
+    "\n",
+    "# Merge with products\n",
+    "merged_df = merged_df.merge(products_df, on=\"product_id\", how=\"left\")\n",
+    "\n",
+    "# Fill missing values for customers with no orders\n",
+    "merged_df.fillna({'order_id': 0, 'product_name': 'No Purchase', 'category': 'None', 'amount': 0}, inplace=True)\n",
+    "\n",
+    "print(merged_df)\n"
+   ]
   },
   {
    "cell_type": "markdown",
