--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -5520,31 +5520,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performance Tips\n",
-    "- Use *merge()* instead of loops for *efficiency*.\n",
-    "- Set *indexes* when dealing with large data: ```df.set_index('column')```\n",
-    "- Use ```df.astype({'column': type})``` to ensure correct data types."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Filter by Text"
+    "**Handling Missing Values**\n",
+    "- Some customers may have no orders, resulting in NaN values. \n",
+    "- We handle them using:\n",
+    "   * ```fillna()``` → Replaces missing values with defaults.\n",
+    "   * ```dropna()``` → Removes rows with missing values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fill missing values for customers with no orders\n",
+    "merged_df.fillna({'order_id': 0, 'product_name': 'No Purchase', 'category': 'None', 'amount': 0}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id     name           city  order_id  product_id  amount  \\\n",
+      "0            1    Alice       New York     101.0       201.0  1200.0   \n",
+      "1            1    Alice       New York     104.0       201.0  1500.0   \n",
+      "2            2      Bob    Los Angeles     103.0       203.0   600.0   \n",
+      "3            2      Bob    Los Angeles     105.0       204.0   900.0   \n",
+      "4            3  Charlie  San Francisco     102.0       202.0   800.0   \n",
+      "5            4    David        Chicago     106.0       205.0   750.0   \n",
+      "6            5      Eve        Houston       0.0         NaN     0.0   \n",
+      "\n",
+      "  product_name     category  \n",
+      "0       Laptop  Electronics  \n",
+      "1       Laptop  Electronics  \n",
+      "2       Tablet      Gadgets  \n",
+      "3   Headphones  Accessories  \n",
+      "4        Phone  Electronics  \n",
+      "5   Smartwatch    Wearables  \n",
+      "6  No Purchase         None  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(merged_df)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "df[df['text_column'].str.contains('keyword')]"
+    " **Using Indexing for Faster Lookups**\n",
+    "- Instead of merging, we can use ```.map()``` for faster column lookups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a mapping for product names\n",
+    "product_map = products_df.set_index(\"product_id\")[\"product_name\"]\n",
+    "\n",
+    "# Apply map() to orders for faster lookup\n",
+    "orders_df[\"product_name\"] = orders_df[\"product_id\"].map(product_map)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Why?**\n",
+    "- ```.merge()``` is great for full table joins.\n",
+    "- ```.map()``` is faster when you need to look up just one column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Using .query() for Filtering**\n",
+    "- Instead of filtering after merging, use ```.query()``` for performance optimization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find high-value purchases (>1000)\n",
+    "high_value_orders = merged_df.query(\"amount > 1000\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Key Takeaways\n",
+    "- ✅ Use ```merge()``` for foreign key joins.\n",
+    "- ✅ Use ```fillna()``` to handle missing values.\n",
+    "- ✅ Use ```.map()``` instead of ```merge()``` for single-column lookups.\n",
+    "- ✅ Use ```query()``` for faster filtering.\n",
+    "- ✅ Use ```set_index()``` for optimized searching."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performance Tips\n",
+    "- Use *merge()* instead of loops for *efficiency*.\n",
+    "- Set *indexes* when dealing with large data: ```df.set_index('column')```\n",
+    "- Use ```df.astype({'column': type})``` to ensure correct data types."
    ]
   },
   {
@@ -5559,11 +5652,6 @@
     "  * analyze data. \n",
     "- Practice these concepts with real-world datasets to become proficient in Pandas!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
