--- a/notebooks/Challenge_pandas.ipynb
+++ b/notebooks/Challenge_pandas.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,11 @@
       "2   3  Charlie     math_score     88\n",
       "3   1    Alice  science_score     92\n",
       "4   2      Bob  science_score     80\n",
-      "5   3  Charlie  science_score     87\n"
+      "5   3  Charlie  science_score     87\n",
+      "   id     name  math_score  science_score\n",
+      "0   1    Alice          90             92\n",
+      "1   2      Bob          85             80\n",
+      "2   3  Charlie          88             87\n"
      ]
     }
    ],
@@ -656,7 +660,264 @@
     "# Convert wide to long format\n",
     "long_df = df.melt(id_vars=[\"id\", \"name\"], var_name=\"subject\", value_name=\"score\")\n",
     "\n",
-    "print(long_df)\n"
+    "print(long_df)\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product = pd.DataFrame({\n",
+    "    'product_id':[0,1],\n",
+    "    'store1':[95,70],\n",
+    "    'store2':[100,None],\n",
+    "    'store3':[105,80]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_long = product.melt(id_vars=['product_id'], var_name='store', value_name='price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   product_id   store  price\n",
+      "0           0  store1   95.0\n",
+      "1           1  store1   70.0\n",
+      "2           0  store2  100.0\n",
+      "3           1  store2    NaN\n",
+      "4           0  store3  105.0\n",
+      "5           1  store3   80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>store</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>store1</td>\n",
+       "      <td>95.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>store2</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>store3</td>\n",
+       "      <td>105.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>store1</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>store3</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id   store  price\n",
+       "0           0  store1   95.0\n",
+       "2           0  store2  100.0\n",
+       "4           0  store3  105.0\n",
+       "1           1  store1   70.0\n",
+       "5           1  store3   80.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_long.dropna().sort_values(by='product_id',inplace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def rearrange_products_table(products: pd.DataFrame) -> pd.DataFrame:\n",
+    "    long_df = products.melt(id_vars=['product_id'], var_name = 'store',value_name='price')\n",
+    "    long_df = long_df.dropna().sort_values(by='product_id',inplace=False)\n",
+    "    return long_df\n",
+    "\n",
+    "------------+--------+\n",
+    "| account_id | income |\n",
+    "+------------+--------+\n",
+    "| 3          | 108939 |\n",
+    "| 2          | 12747  |\n",
+    "| 8          | 87709  |\n",
+    "| 6          | 91796  |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accounts = pd.DataFrame({\n",
+    "    'account_id': [3,2,8,6],\n",
+    "    'income': [108939, 12747,87709,91796] \n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   account_id  income\n",
+      "0           3  108939\n",
+      "1           2   12747\n",
+      "2           8   87709\n",
+      "3           6   91796\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accounts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "able: Accounts\n",
+    "\n",
+    "+-------------+------+\n",
+    "| Column Name | Type |\n",
+    "+-------------+------+\n",
+    "| account_id  | int  |\n",
+    "| income      | int  |\n",
+    "+-------------+------+\n",
+    "account_id is the primary key (column with unique values) for this table.\n",
+    "Each row contains information about the monthly income for one bank account.\n",
+    " \n",
+    "\n",
+    "Write a solution to calculate the number of bank accounts for each salary category. The salary categories are:\n",
+    "\n",
+    "\"Low Salary\": All the salaries strictly less than $20000.\n",
+    "\"Average Salary\": All the salaries in the inclusive range [$20000, $50000].\n",
+    "\"High Salary\": All the salaries strictly greater than $50000.\n",
+    "The result table must contain all three categories. If there are no accounts in a category, return 0.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "Accounts table:\n",
+    "+------------+--------+\n",
+    "| account_id | income |\n",
+    "+------------+--------+\n",
+    "| 3          | 108939 |\n",
+    "| 2          | 12747  |\n",
+    "| 8          | 87709  |\n",
+    "| 6          | 91796  |\n",
+    "+------------+--------+\n",
+    "Output: \n",
+    "+----------------+----------------+\n",
+    "| category       | accounts_count |\n",
+    "+----------------+----------------+\n",
+    "| Low Salary     | 1              |\n",
+    "| Average Salary | 0              |\n",
+    "| High Salary    | 3              |\n",
+    "+----------------+----------------+\n",
+    "Explanation: \n",
+    "Low Salary: Account 2.\n",
+    "Average Salary: No accounts.\n",
+    "High Salary: Accounts 3, 6, and 8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def count_salary_categories(accounts: pd.DataFrame) -> pd.DataFrame:\n",
+    "    categories = {\n",
+    "        \"Low Salary\": (accounts[\"income\"] < 20000).sum(),\n",
+    "        \"Average Salary\": ((accounts[\"income\"] >= 20000) & (accounts[\"income\"] <= 50000)).sum(),\n",
+    "        \"High Salary\": (accounts[\"income\"] > 50000).sum(),\n",
+    "    }\n",
+    "    return pd.DataFrame(categories.items(), columns=[\"category\", \"accounts_count\"])"
    ]
   }
  ],
